# gamechanger-crawlers

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  INTENT.md  README.md  crawler.sh  get_crawler_outputs.py  github_action.check_spiders_scheduled.py  networkCapture.sh  pdfCount.py  pyproject.toml  runCrawler.sh  tox.ini
.github/workflows/: desalinate.yml  pull_request_template.md  release.yml  verify-spiders-scheduled.yml
config/: constants.conf  gc-repos.repo
config/crawler_schedule/: crontab.sh  saturday.txt  tuesday.txt  wednesday.txt
dataPipelines/: __init__.py  cli.py  crawler.sh  log_cfg.yml  logging.py  scanner.py  utils.py
dataPipelines/gc_crawler/: __init__.py  data_model.py  requestors.py  utils.py
dataPipelines/gc_downloader/: cli.py  config.py  doc_utils.py  download_handlers.py  download_utils.py  exceptions.py  file_checkers.py  file_utils.py  manifest_utils.py  models.py  string_utils.py
dataPipelines/gc_scrapy/: README.md  __main__.py  cli.py  previous-manifest-example.json  scrapy.cfg  spiders_to_run_example_file.txt
dataPipelines/notification/: slack.py
dataPipelines/scripts/: crawl_and_download.sh
docker/: Dockerfile  README.md  centos.repo  minimal-requirements.txt
docker/core/: Dockerfile  google-chrome.repo  minimal-requirements.txt
docker/crawl_download_upload/: Dockerfile  README.md  run_job.sh  settings.conf
gc_downloader/: config.py  doc_utils.py  download_handlers.py
jobs/airflow-jobs/: pyproject.toml
jobs/airflow-jobs/dags/: README.md  crawl-pipeline-concurrent.py  crawl-pipeline.py  crawler-dynamic-concurrent-pipeline-minio.py  crawler-gc-dev.py  dummy-dags.py
jobs/airflow-jobs/tests/: conftest.py  dag-loader-unittest.py  test-dags.py
local_docker/: Dockerfile
notification/: slack.py
paasJobs/: README.md  job_runner.sh
paasJobs/configs/: crawler_downloader.conf.sh
paasJobs/crawler_schedule/: crontab.sh  friday.txt  monday.txt  oneoff.txt  saturday.txt  sunday.txt  (+3 more)
rpa/: README.md  cli.py  edl_zip_mover.py  rpa_landing_zone_mover.py
scripts/: combine-certs.sh  crawl_all.sh  gc_crawl_then_upload.sh  rebuild_images.sh  run_crawl_and_download_covid_job.sh  run_crawl_and_download_job.sh
test-env/: README.md  test.txt
test-samm/: (DoD_Manual_5100.76-M)..pdf.metadata  03_08.pdf.metadata  15_06.pdf.metadata  203008p.pdf.metadata  316001p.pdf.metadata  414066p.pdf.metadata  416028m_vol1.pdf.metadata  450009p.pdf.metadata  451512p.pdf.metadata  510076m.pdf.metadata  513203_dodd_2016.pdf.metadata  520001m_vol1.pdf.metadata  520039p.pdf.metadata  520575p.pdf.metadata  AR_12-15_SECNAVINST_4950.4B_AFI_16-105.pdf.metadata  Brooke_Amendment,_(annual_Foreign_Operations,_Export_Financing_and_Related_Programs_Appropriations_Act);.pdf.metadata  Brooke_Amendment_annual_Foreign_Operations_Export_Financing_and_Related_Programs_Appropriations_Act.pdf.metadata  Chairman_of_the_Joint_Chiefs_of_Staff_Instruction_3160.01..pdf.metadata  Chairman_of_the_Joint_Chiefs_of_Staff_Instruction_3160.01.pdf.metadata  DD_Form_2285.pdf.metadata  DOD_Issuance_5200.39.pdf.metadata  DSCA_00-01.pdf.metadata  DSCA_00-02.pdf.metadata  DSCA_00-03.pdf.metadata  DSCA_00-04.pdf.metadata  DSCA_00-05.pdf.metadata  DSCA_00-06.pdf.metadata  DSCA_00-07.pdf.metadata  DSCA_00-08.pdf.metadata  DSCA_00-09.pdf.metadata  DSCA_00-11.pdf.metadata  DSCA_00-12.pdf.metadata  DSCA_00-13.pdf.metadata  DSCA_00-15.pdf.metadata  DSCA_00-16.pdf.metadata  DSCA_00-17.pdf.metadata  DSCA_00-19.pdf.metadata  DSCA_00-20.pdf.metadata  DSCA_01-01.pdf.metadata  DSCA_01-02.pdf.metadata  (+332 more)
tests/: __init__.py  test_crawl.py  test_recursive_unzip.py
(+238 files in other folders)
