[tool.poetry]
name = "gamechanger-crawlers"
version = "0.1.0"
description = ""
authors = ["Gamechanger <gamechanger@bah.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
click = "^8.1.3"
chardet = "^4.0.0"
idna = "^3.3"
importlib-metadata = "^4.11.3"
itemadapter = "^0.5.0"
jsonschema = "^4.4.0"
lxml = "^4.8.0"
PyMuPDF = "^1.19.6"
pyrsistent = "^0.18.1"
requests = "^2.27.1"
selenium = "^4.1.5"
Scrapy = "^2.6.1"
soupsieve = "^2.3.2"
urllib3 = "^1.26.9"
zipp = "^3.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
